# book-network-ui/src/app/services$/models.ts
@@ -1,0 +1,46 @@
+/* tslint:disable */
+/* eslint-disable */
+export { AbstractJsonSchemaPropertyObject } from './models/abstract-json-schema-property-object';
+export { AuthenticationRequest } from './models/authentication-request';
+export { AuthenticationResponse } from './models/authentication-response';
+export { BookRequest } from './models/book-request';
+export { BookRequestBody } from './models/book-request-body';
+export { BookResponse } from './models/book-response';
+export { BookTransactionHistoryRequestBody } from './models/book-transaction-history-request-body';
+export { BookTransactionHistoryResponse } from './models/book-transaction-history-response';
+export { BorrowedBookResponse } from './models/borrowed-book-response';
+export { CollectionModelBook } from './models/collection-model-book';
+export { CollectionModelBookTransactionHistory } from './models/collection-model-book-transaction-history';
+export { CollectionModelFeedback } from './models/collection-model-feedback';
+export { CollectionModelObject } from './models/collection-model-object';
+export { CollectionModelRole } from './models/collection-model-role';
+export { EntityModelBook } from './models/entity-model-book';
+export { EntityModelBookTransactionHistory } from './models/entity-model-book-transaction-history';
+export { EntityModelFeedback } from './models/entity-model-feedback';
+export { EntityModelRole } from './models/entity-model-role';
+export { EntityModelToken } from './models/entity-model-token';
+export { EntityModelUser } from './models/entity-model-user';
+export { FeedbackRequest } from './models/feedback-request';
+export { FeedbackRequestBody } from './models/feedback-request-body';
+export { FeedbackResponse } from './models/feedback-response';
+export { GrantedAuthority } from './models/granted-authority';
+export { Item } from './models/item';
+export { JsonSchema } from './models/json-schema';
+export { Link } from './models/link';
+export { Links } from './models/links';
+export { PagedModelEntityModelBook } from './models/paged-model-entity-model-book';
+export { PagedModelEntityModelBookTransactionHistory } from './models/paged-model-entity-model-book-transaction-history';
+export { PagedModelEntityModelFeedback } from './models/paged-model-entity-model-feedback';
+export { PagedModelEntityModelRole } from './models/paged-model-entity-model-role';
+export { PagedModelEntityModelToken } from './models/paged-model-entity-model-token';
+export { PagedModelEntityModelUser } from './models/paged-model-entity-model-user';
+export { PageMetadata } from './models/page-metadata';
+export { PageResponseBookResponse } from './models/page-response-book-response';
+export { PageResponseBorrowedBookResponse } from './models/page-response-borrowed-book-response';
+export { PageResponseFeedbackResponse } from './models/page-response-feedback-response';
+export { RegistrationRequest } from './models/registration-request';
+export { RepresentationModelObject } from './models/representation-model-object';
+export { RoleRequestBody } from './models/role-request-body';
+export { RoleResponse } from './models/role-response';
+export { TokenRequestBody } from './models/token-request-body';
+export { UserRequestBody } from './models/user-request-body';
